# ryan_ffmpeg_player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ryan_ffmpeg_player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMediaPlayer_jni.cpp  FFMpegMediaPlayer_jni.c  ff_player.c  ff_player_jni.c  native-lib.cpp  ryan_ffmepg_player.c
app/src/main/cpp/JniBase/: JniBase.cpp  JniBase.h  JniBase.txt
app/src/main/cpp/header/: FFMediaPlayer.h  FFMediaPlayer_java.h  FFMpegMediaPlayer_jni.h  ff_player.h  utils.h
app/src/main/cpp/media/: other.cpp
app/src/main/cpp/media/player/: FFMediaConfig.cpp  FFMediaConfig.h  FFMediaPlayer.cpp  FFMediaPlayer.h  FFMediaPlayer_java.cpp  FFMedialPlayer_java.h  mediaPlayer.cpp
app/src/main/java/com/example/ryan_ffmpeg_player/: Constant.java  MainActivity.kt  PermissionUtils.kt  VideoPlayerActivity.kt  VideoSurfaceView.kt  VideoUtil.java  VideoView.kt
app/src/main/java/com/example/ryan_ffmpeg_player/Utils/: FileUtils.java
app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  SDLActivity.java  SDLControllerManager.java
app/src/main/java/ryan_ffmpeg_player/: Constant.java  FFPlayerEngine.java  MainActivity.kt  PermissionUtils.kt  VideoPlayerActivity.kt  VideoSurfaceView.kt  VideoUtil.java
app/src/main/java/ryan_ffmpeg_player/Media/: FFmpegMediaPlayer.java
app/src/main/java/ryan_ffmpeg_player/Utils/: FileUtils.java
app/src/main/java/ryan_ffmpeg_player/media/: FFMediaPlayer.java  ryan_ffmpeg_player_media_FFMediaPlayer.h
app/src/main/java/ryan_ffmpeg_player/utils/: FileUtils.java
app/src/main/jni/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_main.xml  activity_video_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ryan_ffmpeg_player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
